# prism-micro

./: .gitignore  .importlinter  AGENTS.md  CLAUDE.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml
agent-service/: pyproject.toml
agent-service/src/agent_service/: __init__.py  app.py
agent-service/src/agent_service/api/: router.py  schemas.py
agent-service/src/agent_service/core/: config.py  execution_service.py  llm_client.py
agent-service/src/agent_service/models/: __init__.py
agent-service/src/agent_service/skills/: __init__.py
apps/cli/: pyproject.toml
apps/cli/src/prism_cli/: __init__.py
apps/cli/src/prism_cli/commands/: __init__.py  logs.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  (+1 more)
docs/: education-expert-team.md  roadmap.md
llm-service/: alembic.ini  pyproject.toml
llm-service/migrations/: env.py
llm-service/migrations/versions/: 001_create_llm_tables.py  002_base_url_nullable.py
llm-service/src/llm_service/: __init__.py  app.py
llm-service/src/llm_service/api/: __init__.py  compat.py  deps.py  gateway.py  providers.py  router.py  slots.py
llm-service/src/llm_service/api/schemas/: __init__.py  gateway.py  provider.py  slot.py
llm-service/src/llm_service/core/: __init__.py  config.py  crypto.py  errors.py  gateway_service.py  presets.py  provider_service.py  routing.py  service.py  slot_service.py
llm-service/src/llm_service/models/: __init__.py  provider.py  slot.py
scripts/: backend.sh  check-api-contract.sh  frontend.sh  init-local-env.sh
shared/: pyproject.toml
shared/src/prism_shared/: __init__.py  errors.py  exception_handlers.py  exceptions.py  logging.py
shared/src/prism_shared/auth/: __init__.py  api_key.py  api_key_verifier.py  deps.py  jwt.py  password.py  principal.py
shared/src/prism_shared/config/: __init__.py  base.py
shared/src/prism_shared/db/: __init__.py  base.py  neo4j.py  pool_config.py  session.py
shared/src/prism_shared/middleware/: __init__.py  audit.py  request_id.py
shared/src/prism_shared/platform/: log_reader.py  log_routes.py  log_schemas.py
shared/src/prism_shared/schemas/: __init__.py  pagination.py  response.py
user-service/: alembic.ini  pyproject.toml
user-service/migrations/: env.py
user-service/migrations/versions/: 001_create_auth_tables.py
user-service/src/user_service/: __init__.py  app.py
user-service/src/user_service/api/: __init__.py  deps.py  router.py
user-service/src/user_service/core/: __init__.py  config.py  errors.py  schemas.py  service.py
user-service/src/user_service/models/: __init__.py  user.py
voc-service/: pyproject.toml
voc-service/migrations/: env.py
voc-service/migrations/versions/: 001_create_voc_tables.py  002_add_import_v2_fields.py  003_update_status_check_constraint.py  004_add_prompt_ready_status.py
voc-service/src/voc_service/: __init__.py  app.py
voc-service/src/voc_service/api/: data_routes.py  deps.py  detail_routes.py  import_routes.py  pipeline_routes.py  router.py  search_routes.py  tag_routes.py
voc-service/src/voc_service/api/schemas/: __init__.py  data_schemas.py  detail_schemas.py  import_schemas.py  pipeline_schemas.py  search_schemas.py  tag_schemas.py
voc-service/src/voc_service/core/: config.py  data_service.py  exceptions.py  file_parser.py  filter_builder.py  import_background.py  import_service.py  llm_client.py  llm_response.py  processing_service.py  prompt_builder.py  schema_mapping_service.py  search_service.py  tag_service.py
voc-service/src/voc_service/models/: __init__.py  emergent_tag.py  enums.py  ingestion_batch.py  schema_mapping.py  semantic_unit.py  tag_feedback.py  unit_tag_association.py  voice.py
voc-service/src/voc_service/pipeline/: __init__.py  guards.py  stage1_splitting.py  stage2_tagging.py  stage3_embedding.py
voc-service/src/voc_service/prompts/: __init__.py  guard_l2.py  normalize.py  schema_mapping.py  stage1.py  stage2.py
voc-service/tests/: conftest.py  test_guards.py  test_search_api.py  test_tag_api.py
(+186 files in other folders)
