[project]
name = "prism-micro"
version = "0.1.0"
description = "AI 驱动的 VOC 语义分析平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "shared",
    "llm-service",
    "user-service",
    "voc-service",
    "agent-service",
    "apps/cli",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.9",
    "import-linter>=2.1",
    "pre-commit>=4.0",
]
