[project]
name = "agent-service"
version = "0.1.0"
description = "Prism Agent 运行时：Principal 抽象、SkillRegistry、AgentLoop"
requires-python = ">=3.12"
dependencies = [
    "prism-shared",
    "fastapi>=0.115",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_service"]

[tool.uv.sources]
prism-shared = { workspace = true }
