[project]
name = "llm-service"
version = "0.1.0"
description = "Prism LLM 统一网关：4 槽位模型、SlotRouter、故障转移"
requires-python = ">=3.12"
dependencies = [
    "prism-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "cryptography>=44.0",
    "httpx>=0.27",
    "litellm>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_service"]

[tool.uv.sources]
prism-shared = { workspace = true }
