[project]
name = "user-service"
version = "0.1.0"
description = "Prism 用户认证服务：注册/登录/JWT/API Key"
requires-python = ">=3.12"
dependencies = [
    "prism-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pydantic[email]>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/user_service"]

[tool.uv.sources]
prism-shared = { workspace = true }
