[project]
name = "voc-service"
version = "0.1.0"
description = "Prism VOC 数据处理服务：数据导入、AI 管线、语义搜索、涌现标签"
requires-python = ">=3.12"
dependencies = [
    "prism-shared",
    "pgvector>=0.3",
    "alembic>=1.10",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "chardet>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voc_service"]

[tool.uv.sources]
prism-shared = { workspace = true }
