[project]
name = "prism-cli"
version = "0.1.0"
description = "Prism CLI 工具，供 AI Agent 和爬虫触发使用"
requires-python = ">=3.12"
dependencies = [
    "prism-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism_cli"]

[tool.uv.sources]
prism-shared = { workspace = true }
